	between groups) and dispersion (variability within groups) in
	dissimilarity-based analyses.  We have warned on this for long in
	vegan, but now we can get support from this paper. Warnings added
	to anosim, mrpp, simper (where this worst) and adonis (where this
	was already analysed by Marti Anderson when introducing the
	method).

	* anova of prc() objects by "axis", "terms" or "margin" failed due
	to NAMESPACE issues. Reported as issue #7 by Eduard Szöcs in
	github.com.

	* envfit: failed if some of the environmental variables were
	factor with unused factor levels. Fixed in centroids.cca. Reported
	as issue #8 in github.com by Eduard Szöcs.

	* msoplot: expose 'ylim' as an argument. Previously, 'ylim' was
	set internally and user could not change it setting, although
	y-axis maximum was sometimes so low that standard errors were
	outside the plot, and legend covered lines. The default setting of
	'ylim' was improved, and the function follows R idiom more
	closely. Reported in a private email to J.O. by Ricardo Pita.
	
Version 2.1-13 (closed March 9, 2012)

	* cca/rda/capscale: names of levels could be dropped if a
	two-class factor was used as the only constraint. Noticed in an
	email of Sascha Kirchner (Univ Helsinki, Finland).
	
	* scores: expand description of the default method to avoid
	confusion with specific vegan methods.
	
	* scores.monoMDS: did not know 'choices' and hence plot() was also
	unable to choose dimensions. 
	
	* vegdist: Added Cao dissimilarity (CYd). Thanks to Yong Cao for
	consultation. 
	
Version 2.1-12 (closed February 23, 2012)

	* scores.default: failed if users asked scores of non-existing
	axes. This was reported as an error in ordiplot() when the user
	tried to plot 2-dim graph of 1-dim solution in
	https://stat.ethz.ch/pipermail/r-sig-ecology/2012-February/002764.html

	* simper: new function to implement "similarity percentages" of
	Clarke (Austral. J. Ecol. 18, 117-143; 1993) contributed by Eduard
	Szöcs (Uni Landau, Germany).